--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -169,7 +169,7 @@
   bottom: 49px;
   width: 97%;
   height: 91%;
-  background-image: url(../img/cat.png);
+  background-image: url("../img/cat.png");
   background-position: center 208px;
   background-repeat: no-repeat;
   border-radius: 10px;
